<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_uid"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:layout_marginLeft="0dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/uid"
            android:textSize="@dimen/size_text_small" />

        <TextView
            android:id="@+id/tv_uid_value"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:paddingRight="16dp"
            android:gravity="center_vertical|right"
            android:textSize="@dimen/size_text_small" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/border_height"
        android:background="@color/border_gray_color" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_block_num"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:layout_marginLeft="0dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/block_num"
            android:textSize="@dimen/size_text_small" />

        <EditText
            android:id="@+id/et_block_num_value"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:paddingRight="16dp"
            android:inputType="number"
            android:hint="@string/please_enter"
            android:gravity="center_vertical|right"
            android:textSize="@dimen/size_text_small" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/border_height"
        android:background="@color/border_gray_color" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:layout_marginLeft="0dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/increase_decrease_value"
            android:textSize="@dimen/size_text_small" />

        <EditText
            android:id="@+id/et_inc_dec_value"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:paddingRight="16dp"
            android:inputType="number"
            android:hint="@string/please_enter"
            android:gravity="center_vertical|right"
            android:textSize="@dimen/size_text_small" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:text="@string/block_data" />

        <EditText
            android:id="@+id/et_block_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="1234567890abcdefABCDEF"
            android:maxLength="32" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_read"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:onClick="onReadBlockData"
                android:textAllCaps="false"
                android:text="@string/read" />

            <Button
                android:id="@+id/btn_write"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:onClick="onWriteBlockData"
                android:textAllCaps="false"
                android:text="@string/write" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_increase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:onClick="onIncreaseValue"
                android:textAllCaps="false"
                android:text="@string/increase" />

            <Button
                android:id="@+id/btn_decrease"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:onClick="onDecreaseValue"
                android:textAllCaps="false"
                android:text="@string/decrease" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>