<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.arke.sdk.ui.activities.UserLoginActivity">

    <EditText
        android:id="@+id/usernameLoginID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:layout_marginTop="150dp"
        android:hint="@string/user_login_hint"
        android:inputType="text"
        android:padding="5dp"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/passwordLoginID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:layout_marginTop="150dp"
        android:hint="@string/user_password_hint"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textSize="14sp" />

    <Button
        android:id="@+id/userLoginButtonID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="50dp"
        android:background="@color/colorAccent"
        android:padding="5dp"
        android:text="@string/user_login_button"
        android:textColor="@android:color/white"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
