<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/password_background_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/welcome_background"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/admin_password_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="#c4000000"
        android:gravity="center"
        android:orientation="vertical">

        <com.arke.sdk.ui.views.EMenuTextView
            android:id="@+id/screen_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20sp"
            android:text="@string/update_admin_password"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:textStyle="light" />

        <EditText
            android:id="@+id/old_password_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/date_background"
            android:hint="@string/old_admin_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/ease_gray"
            tools:ignore="Autofill,TextFields" />

        <EditText
            android:id="@+id/new_password_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/date_background"
            android:hint="@string/new_admin_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/ease_gray"
            tools:ignore="Autofill,TextFields" />

        <EditText
            android:id="@+id/password_repetition_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/date_background"
            android:hint="@string/repeat_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/ease_gray"
            tools:ignore="Autofill,TextFields" />

        <Button
            android:id="@+id/password_confirmation_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/button_corner"
            android:text="@string/update_" />

        <com.arke.sdk.ui.views.EMenuTextView
            android:id="@+id/password_error_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/red800" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/close_password_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:srcCompat="@drawable/close_icon" />

</FrameLayout>
