<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.arke.sdk.ui.views.EMenuTextView
        android:id="@+id/skip_onboarding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_margin="20dp"
        android:background="@drawable/butter_circle"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingTop="5dp"
        android:paddingEnd="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="5dp"
        android:text="@string/skip"
        android:textColor="@color/white" />

    <com.tayfuncesur.curvedbottomsheet.CurvedLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        app:behavior_hideable="true"
        app:behavior_peekHeight="250dp"
        app:fillColor="@color/colorPrimaryDark"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:clickable="false"
                android:focusable="false"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="20dp">

                <com.arke.sdk.ui.views.EMenuTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="@string/get_started"
                    android:textColor="@color/whitesmoke"
                    android:textSize="16sp"
                    app:textStyle="regular" />

                <Button
                    android:id="@+id/button_create_account"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/create_account"
                    android:theme="@style/Widget.Button.Login.Twitter" />

                <Button
                    android:id="@+id/button_log_in"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/log_in"
                    android:theme="@style/Widget.Button.Login.Google" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="sans-serif"
                    android:gravity="center_horizontal"
                    android:padding="16dp"
                    android:text="@string/authentication_instruction"
                    android:textColor="@color/whitesmoke"
                    android:textSize="13sp" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </com.tayfuncesur.curvedbottomsheet.CurvedLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>